<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImportActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lblImportacao"
        android:textAppearance="?android:textAppearanceLarge"
        tools:layout_editor_absoluteY="10dp" />

    <Button
        android:id="@+id/btnImportarLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnImportar"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="59dp"
        android:onClick="initImport" />

    <ListView
        android:tooltipText="@string/hintTotais"
        android:layout_marginTop="30dp"
        android:id="@+id/listatotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>